--- a/src/nhr_control/CMakeLists.txt
+++ b/src/nhr_control/CMakeLists.txt
@@ -4,13 +4,16 @@ project(nhr_control)
 find_package(catkin REQUIRED COMPONENTS
   rospy
   geometry_msgs
+  nhr_msgs
 )
 
 catkin_package(
-  CATKIN_DEPENDS rospy geometry_msgs
+  CATKIN_DEPENDS rospy geometry_msgs nhr_msgs
 )
 
-catkin_install_python(
-  PROGRAMS nodes/Planner.py scripts/Cost.py
+catkin_install_python(PROGRAMS
+  nodes/Planner.py
+  nodes/Visualizer.py
+  scripts/Cost.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
