Add launch to bring up HNR nodes and optionally Turtlebot3 Burger in Gazebo.

--- a/src/nhr_sim/CMakeLists.txt
+++ b/src/nhr_sim/CMakeLists.txt
@@ -1,29 +1,23 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(nhr_sim)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  nhr_control
   gazebo_ros
+  turtlebot3_description
 )
 
-catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES nhr_sim
-#  CATKIN_DEPENDS gazebo
-#  DEPENDS system_lib
+catkin_package(CATKIN_DEPENDS
+  nhr_control
+  gazebo_ros
+  turtlebot3_description
 )
 
-## Specify additional locations of header files
-## Your package locations should be listed before other locations
 include_directories(
-# include
   ${catkin_INCLUDE_DIRS}
 )
 
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
+install(
+  DIRECTORY launch world
+  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
