--- a/src/nhr_sim/package.xml
+++ b/src/nhr_sim/package.xml
@@ -7,7 +7,13 @@
   <license>TODO</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <build_depend>nhr_control</build_depend>
   <build_depend>gazebo_ros</build_depend>
+  <build_depend>turtlebot3_description</build_depend>
+  <build_export_depend>nhr_control</build_export_depend>
   <build_export_depend>gazebo_ros</build_export_depend>
+  <build_export_depend>turtlebot3_description</build_export_depend>
+  <exec_depend>nhr_control</exec_depend>
   <exec_depend>gazebo_ros</exec_depend>
+  <exec_depend>turtlebot3_description</exec_depend>
 </package>
