--- a/src/nhr_control/package.xml
+++ b/src/nhr_control/package.xml
@@ -9,11 +9,14 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>gazebo_msgs</build_depend>
   <build_depend>nhr_msgs</build_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>geometry_msgs</build_export_depend>
+  <build_export_depend>gazebo_msgs</build_export_depend>
   <build_export_depend>nhr_msgs</build_export_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>gazebo_msgs</exec_depend>
   <exec_depend>nhr_msgs</exec_depend>
 </package>
